--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -6,7 +6,7 @@
     --black:#000000;
     --gray: #c4c4c4;
     --green: #3AB54A;;
-    --white:#000000;
+    --white:#ffffff;
     --font-Lato: 'Lato', sans-serif;
     --font-OpenSans: 'Open Sans', sans-serif;
     --font-Poppins: 'Poppins', sans-serif;
@@ -21,7 +21,7 @@ img {display: block;}
 .container {
     max-width:1158px;
     margin: 0 auto;
-    padding:0 20px;
+    padding:0 15px;
 }
 .flex-container {display: flex;}
 .flex-col {display: flex;flex-direction: column;}
