--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,5 @@
 header {
     padding: 40px 0;
-    background-color: red;
     z-index: 100;
 }
 .header-navigation{
@@ -69,10 +68,27 @@ header {
     padding-top: 70px;
     text-align: center;
 }
+.mobile-menu-links-box{
+    margin: 10px;
+    background-color: var(--green-transp);
+    border-radius: 5px;
+}
 .mobile-links-space{
     width: 100%;
+    height: 40px;
+    padding: 0 15px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    color: var(--white);
+    font-size: 1.125rem;
+    font-weight: 400;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.mobile-links-space:hover{
+    background-color: var(--gray-transp);
+    border-radius: 5px;
 }
 
 @media screen and (max-width: 850px) {
