to page404 added content and style

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -5,6 +5,7 @@
 :root {
     --black:#000000;
     --gray: #c4c4c4;
+    --gray-6: #666666;
     --gray-transp: #00000042;
     --green: #3AB54A;
     --green-transp: #318b3dca;
