created partners component and addd to pages

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,6 +3,7 @@ header {
     width: 100%;
     position: fixed;
     z-index: 100;
+    background-color: var(--white);
 }
 .header-navigation{
     margin: 0 auto;
