--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -77,7 +77,7 @@
         align-items: center;
     }
     .footer-green-flex-h2, .footer-green-flex-p {
-        width: 100vw;
+        width: 100%;
         padding-left: 20px;
         padding-right: 20px;
         text-align: center;
