--- a/src/components/ParticleBg/particleBg.css
+++ b/src/components/ParticleBg/particleBg.css
@@ -1,8 +1,8 @@
 .particle{
-    height: 600px;
+    height: 1000px;
 }
 
-@media screen and (max-width: 1191px){
+/* @media screen and (max-width: 1191px){
     .particle{
         height: 900px;
     }
@@ -12,5 +12,5 @@
     .particle{
         height: 1120px;
     }
-}
+} */
 
