--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -6,6 +6,7 @@
     --black:#000000;
     --gray: #c4c4c4;
     --gray-6: #666666;
+    --green-f7: #F6FFF7;
     --gray-transp: #00000042;
     --green: #3AB54A;
     --green-transp: #318b3dca;
