--- a/src/pages/public/Home/home.css
+++ b/src/pages/public/Home/home.css
@@ -147,8 +147,70 @@
     z-index: 1;
 
 }
+/*home-green-line-feedback*/
+.home-green-line-feedback{
+    padding:  0 0 150px;
+    width: 100%;
+    height: 1000px;
+}
 
+.home-green-line-div{
+    padding-top:150px ;
+    background-color: var(--green);
+    height: 651px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.home-green-line-div h3{
+    color: var(--white);
+    font-size: 3.75rem;
+    font-family: var(--font-Lato);
+    font-weight: 900;
+    text-align: center;
+    max-width: 829px;
+    padding-bottom: 40px;
+}
+.home-green-line-div p{
+    color: var(--white);
+    font-size: 1rem;
+    font-family: var(--font-Roboto);
+    font-weight: 400;
+    text-align: center;
+    max-width: 667px;
+    padding-bottom: 100px;
+}
+.home-green-line-div div{
+    margin: 0 auto;
+    background-color: var(--gray-6);
+    color: var(--white);
+    max-width: 1158px;
+    padding: 115px;
+    text-align: left;
+}
 
+.home-green-line-div div i{
+    text-align: left;
+    font-size: 1.6875rem;
+    font-family: var(--font-Roboto);
+    font-weight: 400;
+    line-height: 1.9375rem;
+    
+}
+.home-green-line-div div h4 {
+    font-size: 1.3125rem;
+    font-family: var(--font-Lato);
+    font-weight: 900;
+    line-height: 1.5625rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.home-green-line-div div span {
+    font-size: 1rem;
+    font-family: var(--font-Roboto);
+    font-weight: 400;
+    line-height: 1.1rem;
+}
 
 
 @media screen and (max-width: 1170px){
