--- a/src/pages/public/Home/home.css
+++ b/src/pages/public/Home/home.css
@@ -137,6 +137,11 @@
     right: 0;
     z-index: 2;
 }
+.home-company-value-img img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 .home-company-value-green{
     background-color: var(--green);
     color: var(--green);
