--- a/src/pages/public/News/NewsCard/newsCard.css
+++ b/src/pages/public/News/NewsCard/newsCard.css
@@ -8,9 +8,13 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .newsCard-img-box{
-   width: 355px;
-   height: 345px;
+   max-width: 355px;
+   height: 100%;
    background-color: var(--gray);
+}
+.newsCard-img-box img {
+    width: 100%;
+    display: block;
 }
 .newsCard-img-h3{
     padding: 0 10px;
